<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:title="@string/menu_location">
        <menu>
            <item
                android:id="@+id/menuCities"
                android:icon="@drawable/ic_location"
                android:title="@string/menu_location_list" />
        </menu>
    </item>

    <item
        android:title="@string/menu_observation">
        <menu>
            <item
                android:id="@+id/menuRecordObservations"
                android:icon="@drawable/ic_eye"
                android:title="@string/menu_record_observation" />

            <item
                android:id="@+id/menuViewObservations"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_observation_list" />

        </menu>
    </item>

</menu>

