<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".WriteObservation">

    <EditText
        android:id="@+id/outlinedTitleField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="220dp"
        android:layout_height="61dp"
        android:layout_marginTop="116dp"
        android:hint="@string/observation_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/outlinedBodyField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:hint="@string/observation_body_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTitleField"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/submitObservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="212dp"
        android:onClick="submitObservation"
        android:text="@string/observation_button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedBodyField" />

    <Button
        android:id="@+id/button1"
        android:layout_width="61dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="setDate"
        android:text="@string/date_button_set"
        app:layout_constraintBottom_toTopOf="@+id/outlinedBodyField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toEndOf="@+id/outlinedTitleField"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignRight="@+id/button1"
        android:text="@string/date_selected"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="81dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="outlinedBodyField,outlinedTitleField" />

</androidx.constraintlayout.widget.ConstraintLayout>